minor alignment issue

--- a/server/client/css/app.css
+++ b/server/client/css/app.css
@@ -198,17 +198,17 @@ body {
 }
 
 #seller-info {
-  height: 160px;
+  height: 180px;
   top: 50%;
   left: 50%;
-  margin-bottom: 35px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
 #seller-info img{
   border-radius: 50%;
   margin-bottom: 5px;
-  margin-top: -5px;
+  margin-top: 12px;
 }
 
 #seller-info .name{
